@@ -1,4 +1,4 @@
-.\"	$NetBSD: pciide.4,v 1.59 2005/03/08 10:50:09 wiz Exp $
+.\"	$NetBSD: pciide.4,v 1.60 2006/03/06 18:35:24 bouyer Exp $
 .\"
 .\" Copyright (c) 1998,2003 Manuel Bouyer.
 .\"
@@ -89,6 +89,9 @@ Promise PDC20246 (Ultra/33), PDC20262 (Ultra/66), PDC20265/PDC20267 (Ultra100),
 PDC20268 (Ultra/100TX2 and Ultra/100TX2v2), Ultra/133, Ultra/133TX2 and
 Ultra/133TX2v2 PCI IDE controllers:
 .Xr pdcide 4
+.It
+Serverworks K2 SATA controllers:
+.Xr svwsata 4
 .It
 Silicon Image 0680 IDE controller:
 .Xr cmdide 4
